[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/icons/quest_marker.png" type="Texture" id=1]
[ext_resource path="res://menus/maps/campNode.gd" type="Script" id=2]

[node name="campNodeButton" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Textures" ]

[node name="field_campName" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -170.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#CAMP NAME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_levelRange" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -170.0
margin_top = 90.0
margin_right = 240.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#(X-Y)
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="." to="." method="_on_campNodeButton_pressed"]


